# spotify_music_refresher

./: .codeclimate.yml  .gitignore  Dockerfile  README.md  app.py  setup.cfg
scripts/: re_fresh.py  update_docs.bat
spotify_refresher/: env.py  pl_creators.py  pl_options.py  refresh.py  scheduler.py  users.py
spotify_refresher/azure/: credential_manager.py
spotify_refresher/utils/: albums.py  artists.py  playlist.py  top_tracks.py  tracks.py  user_tracks.py
