[metadata]
name = spotify_refresher
description = Source code of the Spotify Music Refesher applicaiton.
long_description = file: README.md
author = Pedro Junior Vicente Valdez
author_email = vicentepedrojr@gmail.com
url = https://github.com/pedrojrv/spotify_music_refresher
classifiers =
    Programming Language :: Python :: 3,
    Operating System :: OS Independent,
    Development Status :: 3 - Alpha
keywords = [spotify, music]
project_urls =
    Documentation = https://github.com/pedrojrv/spotify_music_refresher
license = GNU GPLv3
version = 0.0.1

[options]
python_requires = >= 3.8, < 3.12
include_package_data = True
packages = find:
install_requires =
    spotipy
    fastapi
    uvicorn
    pydantic
    azure-functions
    azure-cosmos
    azure-identity
    aiohttp

[options.packages.find]
include = spotify*

[options.extras_require]
dev =
    pytest
    flake8
    flake8-docstrings
    sphinx >= 4
    sphinx-rtd-theme


[flake8]
max_line_length = 120
ignore = E402, E226, W503, W605, D104
exclude =
    venv
    .eggs
    build
# pydocstyle configuration for flake8-docstrings
docstring-convention = google
docstring-match-dir = src
per-file-ignores =
    tests/*: D100, D205, D212, D415

[pycodestyle]
max-line-length = 120
